grading-area/errors.txt
TestListExamples.java:1: error: package org.junit does not exist
import static org.junit.Assert.*;
                       ^
TestListExamples.java:2: error: package org.junit does not exist
import org.junit.*;
^
TestListExamples.java:15: error: cannot find symbol
  @Test(timeout = 500)
   ^
  symbol:   class Test
  location: class TestListExamples
TestListExamples.java:23: error: cannot find symbol
  @Test(timeout = 500)
   ^
  symbol:   class Test
  location: class TestListExamples
TestListExamples.java:30: error: cannot find symbol
	@Test(timeout = 500)
	 ^
  symbol:   class Test
  location: class TestListExamples
TestListExamples.java:21: error: cannot find symbol
    assertEquals(expected, merged);
    ^
  symbol:   method assertEquals(List<String>,List<String>)
  location: class TestListExamples
TestListExamples.java:27: error: cannot find symbol
		assertArrayEquals(new String[]{ "a", "b", "x", "y"}, ListExamples.merge(l1, l2).toArray());
		^
  symbol:   method assertArrayEquals(String[],Object[])
  location: class TestListExamples
TestListExamples.java:34: error: cannot find symbol
		assertArrayEquals(new String[]{ "a", "b", "c", "c", "d", "e" }, ListExamples.merge(l1, l2).toArray());
		^
  symbol:   method assertArrayEquals(String[],Object[])
  location: class TestListExamples
8 errors
